Avoid context menu after long press on iOS
* Works only in Safari on iOS
* Other platforms are probably not relevant

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -77,6 +77,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-touch-callout: none;
 
   background: linear-gradient(to bottom, #f2f5f8, #dadfff);
 
@@ -109,7 +110,12 @@ body {
   }
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
 }
